--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     content="user-scalable=no, initial-scale=1.0, maximum-scale=1, minimum-scale=1.0, width=device-width">
   <meta property="og:title" content="김민석 ♥ 이유선, 결혼합니다!">
   <meta property="og:description" content="저희 두 사람의 특별한 소식을 전합니다.">
-  <meta property="og:image"
-    content="https://wedding.dddproject.com/data/file/order_form/2113089417_snaZV47p_e69f69b4937f1060a0fe64badd9effc58c9024e4.jpg">
+  <meta property="og:image" content="./assets/dist/gallery/0.jpg">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/dist/image/apple-touch-icon.png">
@@ -302,43 +301,37 @@
                     <ul>
                       <li slide-num="1">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_SLh1Cfjo_45dcf47dbc6c3e430afac821f206f146d3f30092.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/1.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="2">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_2GJQM614_e05e1a93311ac9eb8f450a9ece9fc4e710455207.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/2.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="3">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_jeKB2xJ0_79b644045b579c74ea4f94458adf0a5b86d28faa.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/3.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="4">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_qn7bRVm6_e65286bbce7deec3361ee62702a7efc51f7c46f3.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/4.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="5">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_xyDXU2If_9992a40d54ba4d0a9a12a2343a6187ed1d40baa8.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/5.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="6">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_0GDPKaZn_de8f694fcfae6553f5bf3d2118db0c0546d23154.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/6.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
@@ -350,127 +343,73 @@
                     <ul>
                       <li slide-num="7">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_lZv0CM9g_88a0e683f2240bf851649e2b27c599892959af79.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/7.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="8">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_XT9B4rHh_aa86f7336fbba597eb2cdcc52601367e57f72ba2.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/8.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="9">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_Q8qUvr41_46a9256d0235dfc1b38ae7d369b2313c2693e43c.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/9.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="10">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_t2cIsXHU_cb9e924167ed29227fb52adc4fbea788ce16e5c1.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/10.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="11">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_QnabTmyo_c0714840ab4b1a2f7e6d364661b31ef5a876bece.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/11.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="12">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_NdmIu6tG_02be140436be8ebac81c55daf4bd8ec2c6c9d448.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/12.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="13">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_2TJs74q5_9cc53f9da14d26146e136a7df3a792ac74517b71.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/13.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="14">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_a8kXOWuT_0cf5c996e85eca970347e39ddcc7141ca6fa2d1c.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/14.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="15">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_SJgHyw67_173f84d215f81fe26b09caa45d3dfd4b8c7d2837.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/15.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="16">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_ZwDhJg5u_61e1ab12782b2207b43575a0daf004edb14295d9.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/16.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="17">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_3KiWB8I6_99e4db21a7cc646441c4680821185a665b35f23d.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/17.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
                       <li slide-num="18">
                         <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_f5Ng9xTp_92ad91cac8d9e7b3b8d977fde472dfcf27cc87d3.jpg"></span>
-                          <div class="pop"><span class="hover"></span></div>
-                        </a>
-                      </li>
-                      <li slide-num="19">
-                        <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_kocz0FCr_1440ae276f427583ba1fd89bb5b6c779c52acc73.jpg"></span>
-                          <div class="pop"><span class="hover"></span></div>
-                        </a>
-                      </li>
-                      <li slide-num="20">
-                        <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_9fZKiyPE_2a3a4602c19e31dbd477721a9f92396ed9122097.jpg"></span>
-                          <div class="pop"><span class="hover"></span></div>
-                        </a>
-                      </li>
-                      <li slide-num="21">
-                        <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_qVE7sgvK_28718f18a7a6e8d85a7e145f8629267b5b28f6bc.jpg"></span>
-                          <div class="pop"><span class="hover"></span></div>
-                        </a>
-                      </li>
-                      <li slide-num="22">
-                        <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_FWbZGi0z_daa2ab78e2e371bb00876e9df590e87caf9ca4a0.jpg"></span>
-                          <div class="pop"><span class="hover"></span></div>
-                        </a>
-                      </li>
-                      <li slide-num="23">
-                        <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_xVaykGel_f0db628c68f4cb36b8dd2f9f8f04c37acc12fb16.jpg"></span>
-                          <div class="pop"><span class="hover"></span></div>
-                        </a>
-                      </li>
-                      <li slide-num="24">
-                        <a href="javascript:;">
-                          <span class="img lazy"
-                            data-src="https://wedding.dddproject.com/data/file/order_form/2113089417_En5RA6tv_528d5534b66a45595f94cace3563dc9517f02673.jpg"></span>
+                          <span class="img lazy" data-src="./assets/dist/gallery/18.jpg"></span>
                           <div class="pop"><span class="hover"></span></div>
                         </a>
                       </li>
@@ -565,7 +504,7 @@
             <p class="mt">따뜻한 축하의 마음을<br><strong>참석여부와 함께 전해주세요.</strong></p>
           </div>
           <div class="mt">
-            <!-- waveText -->
+            <!-- waveText
             <div class="waveText">
               <div class="marqWrap"><span></span>
                 <div class="wave">
@@ -647,7 +586,7 @@
                 </div>
               </div>
             </div>
-            <!-- //waveText -->
+            //waveText -->
             <!-- comWrap -->
             <div class="comWrap">
               <!-- inputWrap -->
