--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
         <!-- //visualBox -->
       </section>
-      <!-- //mainVisual -->
+      <!-- //mainVisual2 -->
 
 
       <!-- greetingWrap - 인사말 -->
