--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <meta property="og:description" content="저희 두 사람의 특별한 소식을 전합니다.">
   <meta property="og:image" content="./assets/dist/gallery/0.jpg">
 
-  <!-- Favicons -->
+  <!--Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/dist/image/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/dist/image/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/dist/image/favicon-16x16.png">
   <link rel="manifest" href="./assets/dist/image/site.webmanifest">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:400&display=swap" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:400&display=swap" rel="stylesheet">-->
   <link href="./assets/dist/css/commons.css" rel="stylesheet">
   <link href="./assets/dist/css/fonts.css" rel="stylesheet">
   <link href="./assets/dist/css/swiper.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
   <!-- wrap -->
   <div class="wrap">
 
-    <!-- head -->
+    <!-- head 
     <header class="head">
       <div class="inner">
         <div class="h1Wrap">
@@ -64,7 +64,7 @@
       </div>
       <div class="backBg"></div>
     </header>
-    <!-- //head -->
+     //head -->
 
     <!-- container -->
     <div class="container" id="container">
@@ -79,9 +79,9 @@
           <section class="KeyVisual" id="KeyVisual">
             <div class="main">
               <div class="header">
-                <div class="date">09/23</div>
+                <div class="date">09월 23일</div>
                 <div class="names">
-                  <div><span name="김민석" phone="010-1234-1234">
+                  <div><span name="김민석" phone="010-3012-8148">
                       🤵🏻 김 민 석
                     </span><span class="and"></span><span name="이유선" phone="010-1234-1234">
                       이 유 선 👰🏻
@@ -145,13 +145,13 @@
       <section class="greetingWrap" id="greetingWrap">
         <div class="secTitleWrap">
           <h2>
-            <p class="mt">모시는 글</p>
+            <p>모시는 글</p>
           </h2>
 
         </div>
         <div class="greetingBox">
           <div class="greetingInner">
-            <div class="textBox mt">
+            <div class="textBox">
               <p>둘이 함께면<br />
                 가장 즐거운 사람을 만나<br />
                 평생을 결심합니다.<br /><br />
@@ -163,7 +163,7 @@
                 함께해 주세요.<br />
               </p>
             </div>
-            <div class="mt2">
+            <div>
               <div class="ranBox">
                 <div class="box">
                   <em>김명섭 · 최경미</em>의 장남 <strong>민석</strong>
@@ -188,11 +188,11 @@
             <h2>The Wedding Day</h2>
           </div>
           <div class="dayBox">
-            <p class="mt">
+            <p>
               2023년 9월 23일 토요일<br>
               오후 3시 00분 </p>
           </div>
-          <div class="mt2">
+          <div>
             <!--<div class="placeBox"><span>삼성금융캠퍼스 비전홀</span></div>-->
             <!-- calWrap -->
             <div class="calWrap">
@@ -322,10 +322,10 @@
                 class="ran r4">L</span><span class="ran r1">L</span><span class="ran r5">E</span><span
                 class="ran r10">R</span><span class="ran r2">Y</span>
             </h2>
-            <p class="mt">두 사람의 사랑을 담은 순간</p>
+            <p>두 사람의 사랑을 담은 순간</p>
           </div>
           <!-- galWrap -->
-          <div class="galWrap mt">
+          <div class="galWrap">
             <div class="inner">
               <!-- gallery -->
               <div class="gallery">
@@ -481,7 +481,7 @@
           <!-- contBox -->
           <!-- //contBox -->
           <!-- contBox -->
-          <p class="mt text">마음 전하실 곳</p>
+          <p class="text">마음 전하실 곳</p>
           <div class="contBox orderBankInfo groom">
             <div class="tit"><span>신랑측</span></div>
 
@@ -563,7 +563,7 @@
                 class="ran r9">A</span><span class="ran r3">T</span><span class="ran r2">I</span><span
                 class="ran r8">O</span><span class="ran r3">N</span>
             </h2>
-            <p class="mt">오시는 길을 안내합니다.</p>
+            <p>오시는 길을 안내합니다.</p>
           </div>
           <!-- mapWrap -->
           <div class="mapWrap">
