--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
                 함께해 주세요.<br />
               </p>
             </div>
+
             <div>
-              <div class="ranBox">
+              <p>ㆍㆍㆍ</p>
+              <div class="ranBox" style="padding-top:0px">
                 <div class="box">
                   <em>김명섭 · 최경미</em>의 장남 <strong> 민석</strong>
                 </div>
@@ -176,10 +178,10 @@
                     class="tel">연락하기</span></button>
               </div>
 
+
               <br />
               <div class="notice-wrap" style="margin-top: 20px;">
-                <div class="box fade-in white"
-                  style="opacity: 1; transform: translate(0px, 0px);margin-right: 50px;margin-left: 50px;">
+                <div class="box fade-in white" style="opacity: 1; transform: translate(0px, 0px);">
                   <div>
                     <div class="title fade-in" style="opacity: 1; transform: translate(0px, 0px);"><span
                         class="inner white">안내사항</span></div>
@@ -203,11 +205,11 @@
       <section class="dayWrap" id="dayWrap">
         <div class="dayInner">
           <div class="secTitleWrap" style="margin-top: 0px; padding-top: 0px; margin-bottom: 15px;">
-            <p class="headtitle" style="margin-top: 0px; padding-top: 0px; margin-bottom: 10px;">모시는 날</p>
+            <p class="headtitle" style="margin-top: 0px; padding-top: 0px; margin-bottom: 10px;">SAVE THE DATE</p>
           </div>
           <div class="dayBox">
             <p>
-              2023년 9월 23일 토요일 오후 3시
+              23년 9월 23일 (토) 오후 3시
             </p>
           </div>
           <div>
@@ -333,7 +335,7 @@
       <section class="galleryWrap" id="galleryWrap">
         <div class="galleryInner">
           <div class="secTitleWrap t1">
-            <p class="headtitle" style="margin-bottom: 15px;padding-top: 0px;">갤러리</p>
+            <p class="headtitle" style="margin-bottom: 15px;padding-top: 0px;">GALLERY</p>
             <p style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;">두 사람의 사랑을 담은 순간</p>
           </div>
           <!-- galWrap -->
@@ -496,7 +498,7 @@
           <!-- contBox -->
 
           <p
-            style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;text-align: center; margin : 15px;">
+            style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;text-align: center; margin : 15px; margin-bottom:30px;">
             마음 전하실 곳</p>
           <div class="contBox orderBankInfo groom" style="border-radius: 10px;">
             <div class="tit" style="border-radius: 10px;"><span>신랑측</span></div>
@@ -866,7 +868,8 @@
               링크주소 복사하기</p>
           </button>
           <div style="padding-top:10px;padding-bottom:20px;">
-            <p class="headtitle" style="margin-bottom: 15px;padding-top: 0px;">Copyright ⓒ 2023. Minseok & Yousun. All
+            <p class="headtitle" style="font-size :10px;margin-bottom: 15px;padding-top: 0px;">Copyright ⓒ 2023. Minseok
+              & Yousun. All
               rights reserved.</p>
 
           </div>
