--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
       <section class="locationWrap" id="locationWrap">
         <div class="locationInner">
           <div class="secTitleWrap t1">
-            <p class="headtitle" style="margin-bottom: 15px;padding-top: 0px;">모시는 장소</p>
+            <p class="headtitle" style="margin-bottom: 15px;padding-top: 0px;">LOCATION</p>
             <p style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;">오시는 길을 안내합니다.</p>
           </div>
           <!-- mapWrap -->
@@ -839,7 +839,7 @@
       <section>
         <div class="secTitleWrap t1">
 
-          <p class="headtitle" style="margin-bottom: 15px;padding-top: 30px;">공유하기</p>
+          <p class="headtitle" style="margin-bottom: 15px;padding-top: 30px;">SHARE</p>
           <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"
             integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx"
             crossorigin="anonymous"></script>
