--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 </div>
                 <div class="titleWedding">
                   결 혼 합 니 다
-                </div> <img src="./assets/dist/gallery/0.jpg" width="90%" class="img">
+                </div> <img src="./assets/dist/gallery/w0.jpg" width="90%" class="img">
                 <div class="time">2023. 09. 23. SAT 3PM</div>
-                <div class="location">서초동 삼성금융캠퍼스 비전홀</div>
+                <div class="location">서초 삼성금융캠퍼스 비전홀</div>
               </div>
             </div>
           </section>
@@ -100,7 +100,7 @@
           <div class="mainImg">
 
             <div class="imgBox">
-              <span class="img"><img src="./assets/dist/gallery/1.jpg" alt="메인사진"></span>
+              <span class="img"><img src="./assets/dist/gallery/w1.jpg" alt="메인사진"></span>
             </div>
             <!-- 
 
@@ -153,13 +153,10 @@
         <div class="greetingBox">
           <div class="greetingInner">
             <div class="textBox">
-              <p>둘이 함께면<br />
-                가장 즐거운 사람을 만나<br />
-                평생을 결심합니다.<br /><br />
-                저희 두 사람이<br />
+              <p>저희 두 사람이<br />
                 하나가 되는 뜻깊은 날<br />
                 초대 드립니다.<br /><br />
-                귀한 걸음 하시어<br />
+                귀한 발걸음 하시어<br />
                 따듯한 축복으로<br />
                 함께해 주세요.<br />
               </p>
@@ -186,8 +183,15 @@
                     <div class="title fade-in" style="opacity: 1; transform: translate(0px, 0px);"><span
                         class="inner white">안내사항</span></div>
                     <div class="text fade-in" style="opacity: 1; transform: translate(0px, 0px);">
-                      <div>포토부스 이용 안내 <br><br>포토부스가 설치될 예정입니다.<br>귀한 발걸음 해주신 여러분의<br>환한 미소와 따뜻한 말씀 남겨주시면<br>소중히 간직하도록
-                        하겠습니다.<br><br>화환 진입 불가 안내<br><br>화환은 진입이 불가하오니...</div><!--
+                      <div><strong>포토 부스</strong><br>오후 2시부터 포토부스가<br>설치될 예정입니다.<br>촬영과 인화가 가능하오니<br>일찍 오시어 추억 남겨주세요.
+                        <br><br><strong>화환 안내</strong><br>화환 반입이 예식장 정책으로<br>
+                        불가하오니 정중히 사양합니다.<br><br>
+                        <strong>참석 의사 전달</strong><br>
+                        소중한 분들을<br>
+                        귀하게 모실 수 있도록<br>
+                        참석 의사 전달 부탁드립니다.<br><button type="button" class="btns btns_call c2" onclick="openImg('');"><span
+                            class="check">참석 의사 전달하기</span></button>
+                      </div><!--
                       <div class="img-wrap img-wrap-margin"><img
                           src="/w/Hr9Hp3/photos/Hr9Hp3_mcard_2023-03-22_514bf42a50e7424c9030764cc6bf73fa_w1280.jpg">
                       </div> -->
@@ -288,9 +292,7 @@
 
           <div class="countDay">
             <span>민석 & 유선의 결혼식이 </span>
-            <span class="num"><em class="day1">0</em></span>
-            <span class="num"><em class="day2">0</em></span>
-            <span class="num numThree"><em class="day3">0</em></span>
+            <span class="num"><em class="day1">0</em><em class="day2">0</em><em class="day3">0</em></span>
             <span class="txt">일 남았습니다.</span>
           </div>
         </div>
@@ -500,8 +502,8 @@
           <p
             style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;text-align: center; margin : 15px; margin-bottom:30px;">
             마음 전하실 곳</p>
-          <div class="contBox orderBankInfo groom" style="border-radius: 10px;">
-            <div class="tit" style="border-radius: 10px;"><span>신랑측</span></div>
+          <div class="contBox orderBankInfo groom">
+            <div class="tit"><span>🤵🏻 신랑측</span></div>
 
             <div class="toggle" data-id="bank-0">
               <div class="info">
@@ -513,7 +515,7 @@
               </div>
               <div class="btn">
 
-                <button class="no2 bankCopy" data-clipboard-text="ㅇㅇ은행 0000-00-000000 김명섭"><span>계좌번호
+                <button class="no4 bankCopy" data-clipboard-text="ㅇㅇ은행 0000-00-000000 김명섭"><span>계좌번호
                     복사</span></button>
               </div>
             </div>
@@ -528,15 +530,14 @@
               <div class="btn">
                 <button class="no1" onclick="window.open('https://qr.kakaopay.com/Ej8Yhkjvk');"><span>카카오페이
                     송금</span></button>
-                <button class="no3" onclick="window.open('https://toss.me/결혼축하해민석');"><span>토스
-                    송금</span></button>
+
                 <button class="no2 bankCopy" data-clipboard-text="ㅇㅇ은행 0000-00-000000 김민석"><span>계좌번호
                     복사</span></button>
               </div>
             </div>
           </div>
-          <div class="contBox orderBankInfo bride" style="border-radius: 10px;">
-            <div class="tit" style="border-radius: 10px;"><span>신부측</span></div>
+          <div class="contBox orderBankInfo bride">
+            <div class="tit"><span>👰🏻 신부측</span></div>
 
             <div class="toggle" data-id="bank-0">
               <div class="info">
@@ -548,7 +549,7 @@
               </div>
               <div class="btn">
 
-                <button class="no2 bankCopy" data-clipboard-text="ㅇㅇ은행 0000-00-000000 이재완"><span>계좌번호
+                <button class="no4 bankCopy" data-clipboard-text="ㅇㅇ은행 0000-00-000000 이재완"><span>계좌번호
                     복사</span></button>
               </div>
             </div>
@@ -577,41 +578,31 @@
         <div class="locationInner">
           <div class="secTitleWrap t1">
             <p class="headtitle" style="margin-bottom: 15px;padding-top: 0px;">LOCATION</p>
-            <p style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;">오시는 길을 안내합니다.</p>
+            <p style="font-family: 'AritaBuri'; font-weight: 600;font-size: 18px;color: #222222;margin-bottom: 20px;">서울
+              서초구
+              사임당로23길 27<br>삼성금융캠퍼스 연수원 비전홀 B2 <button class="btn copy03" style="width:15px;"
+                data-clipboard-text="서울 서초구 사임당로23길 27"><img
+                  src="https://wedding.dddproject.com/skin/tpl/wedding03-new/images/icon_clipboard.png"
+                  class="clipboard" alt=""></button></p>
           </div>
           <!-- mapWrap -->
           <div class="mapWrap">
             <div id="map" style="width:100%;height:350px;" class="root_daum_roughmap root_daum_roughmap_landing"></div>
           </div>
           <!-- //mapWrap -->
-          <!-- addrWrap -->
-          <div class="addrWrap">
-            <div class="box">
-              <em class="addr">서울 서초구 사임당로23길 27 삼성금융캠퍼스 연수원</em>
-              <button class="btn copy03" data-clipboard-text="서울 서초구 사임당로23길 27"><img
-                  src="https://wedding.dddproject.com/skin/tpl/wedding03-new/images/icon_clipboard.png"
-                  class="clipboard" alt=""></button>
-            </div>
-            <div class="box">
-              <span class="label">식장 안내</span>
-              <strong class="hall" style="text-align: right;">삼성 금융캠퍼스 비전홀</strong>
-            </div>
-            <button type="button" class="btns t1 c2" onclick="openImg('assets/dist/image/map.jpg');"><span
-                class="roughMap">약도 이미지 보기</span></button>
-          </div>
-          <!-- //addrWrap -->
           <!-- infoLoca -->
           <div class="infoLoca">
             <div class="inner">
-              <div class="box">
-                <h3 class="tit01">내비게이션</h3>
-                <p class="tit02">원하시는 앱을 선택하시면 길안내가 시작됩니다.</p>
+              <div class="box" style="border-bottom: 0px; padding-top: 15px; padding-bottom: 15px;">
                 <div class="btnLoca">
                   <a href="#;" class="btns no1" onclick="fnCallWeb2App('kakaoNavi')"><span>카카오내비</span></a>
                   <a href="#;" class="btns no2" onclick="fnCallWeb2App('tmap')"><span>티맵</span></a>
                   <a href="#;" class="btns no3" onclick="fnCallWeb2App('naverMap')"><span>네이버지도</span></a>
                 </div>
+                <button type="button" class="btns t1 c2" onclick="openImg('assets/dist/image/map.jpg');"><span
+                    class="roughMap">약도 이미지 보기</span></button>
               </div>
+
               <div class="box">
                 <h3 class="tit01">주차안내</h3>
                 <p class="tit02">150대 동시 주차 가능, 2시간 무료 주차</p>
@@ -837,7 +828,7 @@
 
       <!-- galleryWrap - 웨딩 갤러리 -->
       <section>
-        <div class="secTitleWrap t1">
+        <div class="secTitleWrap t1" style="background-color: #f9f9f9;">
 
           <p class="headtitle" style="margin-bottom: 15px;padding-top: 30px;">SHARE</p>
           <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"
@@ -868,7 +859,8 @@
               링크주소 복사하기</p>
           </button>
           <div style="padding-top:10px;padding-bottom:20px;">
-            <p class="headtitle" style="font-size :10px;margin-bottom: 15px;padding-top: 0px;">Copyright ⓒ 2023. Minseok
+            <p class="headtitle" style="font-size :12px;margin-bottom: 15px;padding-top: 0px;letter-spacing :-0.2px;">
+              Copyright ⓒ 2023. Minseok
               & Yousun. All
               rights reserved.</p>
 
@@ -902,52 +894,52 @@
                 alt="슬라이드"></div>
           </div>
           <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="0" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/1.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w1.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide swiper-slide-next" data-swiper-slide-index="1" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/2.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w2.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="2" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/3.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w3.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="3" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/4.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w4.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="4" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/5.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w5.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="5" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/6.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w6.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="6" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/7.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w7.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="7" style="width: 543px;">
             <div class="slide"><img src="./assets/dist/gallery/8.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="8" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/9.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w9.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="9" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/10.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w10.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="10" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/11.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w11.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="11" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/12.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w12.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="12" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/13.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w13.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="13" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/14.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w14.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="14" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/15.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w15.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="15" style="width: 543px;">
-            <div class="slide"><img src="./assets/dist/gallery/16.jpg" alt="슬라이드"></div>
+            <div class="slide"><img src="./assets/dist/gallery/w16.jpg" alt="슬라이드"></div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="16" style="width: 543px;">
             <div class="slide"><img src="./assets/dist/gallery/17.jpg" alt="슬라이드"></div>
